chore: working on ui

--- a/playground/index.html
+++ b/playground/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script src="http://localhost:3000/widgets/feedback-widget.full.js" defer type="module"></script>
+    <script src="http://localhost:3000/widget.js" defer></script>
+    <link rel="stylesheet" href="http://localhost:3000/widget.css" />
   </head>
 
   <body>
