--- a/playground/index.html
+++ b/playground/index.html
@@ -5,20 +5,22 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script src="http://localhost:3000/widget.js" defer></script>
-    <link rel="stylesheet" href="http://localhost:3000/widget.css" />
+
+    <link
+      rel="preload"
+      href="http://localhost:3000/widget.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+      <link rel="stylesheet" href="http://localhost:3000/widget.css" />
+    </noscript>
+    <!-- defer js -->
+    <script src="http://localhost:3000/widget.js" defer type="module" async></script>
   </head>
 
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-    <div id="feedback-root"></div>
-    <script>
-      document.addEventListener('DOMContentLoaded', () => {
-        mountFeedbackWidget('#feedback-root', {
-          /* any props */
-        })
-      })
-    </script>
   </body>
 </html>
