feat: Implement runtime app/lang config for feedback widget

--- a/playground/index.html
+++ b/playground/index.html
@@ -16,11 +16,12 @@
       <link rel="stylesheet" href="http://localhost:3000/widget.css" />
     </noscript>
     <!-- defer js -->
-    <script src="http://localhost:3000/widget.js" defer type="module" async></script>
   </head>
 
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="/widget.js" defer></script>
+    <!-- ADDED LINE -->
   </body>
 </html>
